--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -11,7 +11,7 @@
   <header>
     <h1>MyShop</h1>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="index.php">Home</a>
       <a href="cart.html">Cart</a>
       <a href="login.html">Login</a>
     </nav>
